# blackhole

./: .gitignore  Cargo.toml  Dockerfile  README.md  crd.yaml  kustomization.yaml
.github/workflows/: build.yaml
kustomize/: controller.yaml  kustomization.yaml
src/: crd.rs  crdgen.rs  main.rs
